# stream-squeeze-insights-main

./: README.md  index.html  script.js  styles.css
backend/: CMakeLists.txt  README.md  delta.cpp  delta.h  huffman.cpp  huffman.h  main.cpp
